5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1758_1576.log
== TEST (2019-05-23 10:48:47) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(a))
a = (a, dtype = int)
b = (b, dtype = int)
i = 0
while(i<size(a)):
	if((a==11 and b==11) or (a==22 and b==22) or (a==33 and b==33)):
		print("EMPATE")
		i = i + 1
	elif((a==11 and b==33) or (a==22 and b==11) and (a==33 and b==22)):
		print("EUSAPIA")
		i = i +1
	elif((b==11 and a==33) or (b==22 and a==11) and (b==33 and a==22)):
		print("BARSANULFO")
-- ERROR:
File "XXXX", line 5
    a = (a, dtype = int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:49:07) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(a))

i = 0
while(i<size(a)):
	if((a==11 and b==11) or (a==22 and b==22) or (a==33 and b==33)):
		print("EMPATE")
		i = i + 1
	elif((a==11 and b==33) or (a==22 and b==11) and (a==33 and b==22)):
		print("EUSAPIA")
		i = i +1
	elif((b==11 and a==33) or (b==22 and a==11) and (b==33 and a==22)):
		print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:42) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(a))

i = 0
while(i<size(a)):
	if (a==11 and b==11) or (a==22 and b==22) or (a==33 and b==33)):
		print("EMPATE")
		i = i + 1
	elif((a==11 and b==33) or (a==22 and b==11) and (a==33 and b==22)):
		print("EUSAPIA")
		i = i +1
	elif((b==11 and a==33) or (b==22 and a==11) and (b==33 and a==22)):
		print("BARSANULFO")
-- ERROR:
File "XXXX", line 8
    if (a==11 and b==11) or (a==22 and b==22) or (a==33 and b==33)):
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:51) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(a))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e==11 and b==33) or (e==22 and b==11) or (e==33 b==22)):
		soma1 = soma1 + 1
	elif((b==11 and e==33) or (b==22 and e==11) or (b==33 and e==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 10
    if((e==11 and b==33) or (e==22 and b==11) or (e==33 b==22)):
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:12) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(a))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e==11 and b==33) or (e==22 and b==11) or (e==33 b==22)):
		soma1 = soma1 + 1
	elif((b==11 and e==33) or (b==22 and e==11) or (b==33 and e==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 10
    if((e==11 and b==33) or (e==22 and b==11) or (e==33 b==22)):
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:24:36) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(a))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 10
    if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 b[i]==22)):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:25:03) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(a))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 10
    if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 b[i]==22)):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:27:22) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(b))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 10
    if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 b[i]==22)):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:12) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(b))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 and e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:32) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(b))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 and e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.398932
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:47) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(b))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 and e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:21) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(b))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 and e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:32) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(b))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 and e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:38) 
-- CODE:
from numpy import *
e= array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o vetor: ")))
print(size(b))

i = 0
soma1 = 0
soma2 = 0
while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		soma1 = soma1 + 1
	elif((b[i]==11 and e[i]==33) or (b[i]==22 and e[i]==11) or (b[i]==33 and e[i]==22)):
		soma2 = soma2 +1
	else:
		msg = "empate"
	i = i + 1
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
